project/tests/rsl_test_cases/fail/SUBTYPE_AXIOM.rsl
scheme SUBTYPE_AXIOM_NEGATIVE =
  class
    type
      NonZero = {| x : A :- x ~= 0 |}
    value
      inverse : NonZero -> Bool
      inverse(x) is 1 / x
    type
      A = Int
    axiom
      [inverseProperty] (all x : NonZero :- inverse(x) * x = 1)
  end
